# sdi2ddl

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build.yml  cmake.yml
src/: sdi2ddl.cc
src/include/: collations.h  columns.h  foreign_keys.h  indexes.h  table.h  types.h  utils.h
test/: CMakeLists.txt  cleanup.sh  common.sh  prep.sh  test1.sh  test2_generated_columns.sh  test3_json.sh  test4_functional_index.sh  test5_fk.sh  test6_prefix_index.sh  test7_gipk.sh  test8_compare_ddl.sh
